[package]
name = "cairo-bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", tag = "v2.5.0", features = [
    "extensive_hints",
    "clap",
] }
num-traits = "0.2.19"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
starknet-crypto = "0.8.0"
starknet-types-core = "0.2.3"
thiserror-no-std = "2.0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.19.0"
